--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
+aspectj = "1.9.21"
+aspectjpipeline = "1.4.1"
 
 [libraries]
 android-aop-core = { module = "io.github.FlyJingFish.AndroidAop:android-aop-core", version.ref = "androidAopCore" }
@@ -29,6 +31,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+aspectj-rt = { module = "org.aspectj:aspectjrt", version.ref = "aspectj" }
+aspectj-tools = { module = "org.aspectj:aspectjtools", version.ref = "aspectj" }  # plugin
+aspectjpipeline = { module = "com.ibotta:plugin", version.ref = "aspectjpipeline" }  # plugin
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
